--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: "ignore,.github"
+          excluded_paths: ".bumpversion.cfg,.editorconfig,.gitignore,.isort.cfg,.github"
